Save before trying to generate the main module's library files path variables with a variable indirect expansion (${!var})

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -855,7 +855,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH' \
         "${__BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize '.lib')" \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'BasicMaths.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -872,7 +872,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_CHECKINGS_PATH' \
         "${__BU_MAIN_MODULE_FUNCTIONS_FILE_CHECKINGS_PATH}" 'Filepath' \
-        "$()" \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Checkings.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -887,8 +887,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH}" 'Filepath' \
-        "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'CMDS.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -905,7 +906,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DECHO_PATH' \
         "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DECHO_PATH}" 'Filepath' \
-        "$()" \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Decho.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -920,8 +921,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'DevTools.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -936,8 +938,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Directories.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -952,8 +955,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Echo.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -968,8 +972,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Errors.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -984,8 +989,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Files.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1000,8 +1006,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Filesystem.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1016,8 +1023,9 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 
     }
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH}" \
-        'Filepath' "$()" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH' \
+        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH}" 'Filepath' \
+        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Headers.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1033,7 +1041,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_INPUTS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_INPUTS_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Inputs.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1049,7 +1057,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_LOCALE_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_LOCALE_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Locale.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1065,7 +1073,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_MODULES_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_MODULES_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Modules.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1081,7 +1089,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_OS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_OS_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'OS.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1097,7 +1105,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_POSIXTERM_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_POSIXTERM_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'PosixTerm.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1113,7 +1121,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_STATUS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_STATUS_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Status.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1129,7 +1137,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Text.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1145,7 +1153,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXTFORMAT_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXTFORMAT_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'TextFormat.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1161,7 +1169,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_TIME_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_TIME_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Time.lib'()" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
@@ -1177,7 +1185,7 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     }
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_USAGE_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_USAGE_PATH}" \
-        'Filepath' "$()" \
+        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Usage.lib')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
