Adding new functions and the automatic creation of global filepath variables into the "BU.Main.ModConfig.Module.MainModuleFunctionsPath()" function from the main module's "module.conf" file

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -823,371 +823,84 @@ function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
 function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 {
     #**** Variables ****
-    declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
+    declare -A file_paths;  # VAR TYPE : Array  - DESC : This associative array stores the
+
+    declare -i v_lineno;    # VAR TYPE : Int    - DESC : Line number of a global variable declaration.
+
+    local v_filename;       # VAR TYPE : String - DESC : Filename without its path.
+    local v_filenameNoExt;  # VAR TYPE : String - DESC : Filename without its path and its extension.
+
+    local v_varNameFull;    # VAR TYPE : String - DESC :
 
     #**** Code ****
+    # Automatically creating a global filepath variable for each existing library file in case they are needed, since it takes a lot of lines to do manually.
+    for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
+        # Obtaining the file's name without its path.
+        v_filename="$(BU.Main.Files.GetNameFromPath "${f}")";
+
+        # Removing the ".lib" extension.
+        v_filenameNoExt="$(BU.Main.Files.DeleteExtension "${v_filename}" '.lib')";
+
+        # Uppercasing the output of the previous command in order to write it into the new global variable's name.
+        v_filenameNoExt="${v_filenameNoExt^^}";
+
+        # Creation of the global filepath variable's name.
+        v_varNameFull="__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH";
+
+        # Assignation de la valeur dans le tableau associatif.
+        file_paths["${v_varNameFull}"]="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')";
+
+        v_lineno="$(( LINENO - 2 ))";
+
+        BU.ModuleInit.DisplayInitGlobalVarsInfos "$v_varNameFull" \
+            "${file_paths["$v_varNameFull"]}" 'Filepath' \
+            "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize "${v_filename}")" \
+            "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
+    done
+
+#     for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
+#         # Obtaining the file's name after deleting its path.
+#         v_filename="$(BU.Main.Files.GetNameFromPath "${f}")";
+#
+#         # Removing the ".lib" extension.
+#         v_filenameNoExt="$(BU.Main.Files.DeleteExtension "${v_filename}" '.lib')";
+#
+#         # Uppercasing the output of the previous command in order to write it into the new global variable's name.
+#         v_filenameNoExt="${v_filenameNoExt^^}";
+#
+#         v_varNameFull="__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH";
+#
+#         __BU_MAIN_MODULE_FUNCTIONS_FILE_"${v_filenameNoExt}"_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')";
+#
+#         v_lineno="$(( LINENO - 2 ))";
+#
+#
+#         BU.ModuleInit.DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH" \
+#             "${!v_varNameFull}" 'Filepath' \
+#             "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize "${v_filename}")" \
+#             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+#             "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
+#     done
+
+
+    #******************* OLD CODE *******************
 
     #~ ~~~~~~~~~~~~~~~
     #~ "Args.lib" file
     #~ ~~~~~~~~~~~~~~~
 
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH="$(BU.ModuleInit.FindPath "" "Args.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Args.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-    #~ ~~~~~~~~~~~~~~~~~~~~~
-    #~ "BasicMaths.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH="$(BU.ModuleInit.FindPath "" "BasicMaths.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'BasicMaths.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~~~
-    #~ "Checkings.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_CHECKINGS_PATH="$(BU.ModuleInit.FindPath "" "Checkings.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_CHECKINGS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_CHECKINGS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Checkings.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~
-    #~ "CMDS.lib" file
-    #~ ~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH="$(BU.ModuleInit.FindPath "" "CMDS.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_CMDS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'CMDS.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~
-    #~ "Decho.lib" file
-    #~ ~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_DECHO_PATH="$(BU.ModuleInit.FindPath "" "Decho.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DECHO_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DECHO_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Decho.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~~
-    #~ "DevTools.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH="$(BU.ModuleInit.FindPath "" "DevTools.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DEVTOOLS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'DevTools.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~~~~~
-    #~ "Directories.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH="$(BU.ModuleInit.FindPath "" "Directories.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_DIRECTORIES_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Directories.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~
-    #~ "Echo.lib" file
-    #~ ~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH="$(BU.ModuleInit.FindPath "" "Echo.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ECHO_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Echo.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~
-    #~ "Errors.lib" file
-    #~ ~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH="$(BU.ModuleInit.FindPath "" "Errors.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ERRORS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Errors.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~
-    #~ "Files.lib" file
-    #~ ~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH="$(BU.ModuleInit.FindPath "" "Files.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_FILES_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Files.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~~~~
-    #~ "Filesystem.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH="$(BU.ModuleInit.FindPath "" "Filesystem.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_FILESYSTEM_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Filesystem.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~
-    #~ "Headers.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH="$(BU.ModuleInit.FindPath "" "Headers.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH' \
-        "${__BU_MAIN_MODULE_FUNCTIONS_FILE_HEADERS_PATH}" 'Filepath' \
-        "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Headers.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~
-    #~ "Inputs.lib" file
-    #~ ~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_INPUTS_PATH="$(BU.ModuleInit.FindPath "" "Inputs.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_INPUTS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_INPUTS_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Inputs.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~
-    #~ "Locale.lib" file
-    #~ ~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_LOCALE_PATH="$(BU.ModuleInit.FindPath "" "Locale.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_LOCALE_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_LOCALE_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Locale.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~
-    #~ "Modules.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_MODULES_PATH="$(BU.ModuleInit.FindPath "" "Modules.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_MODULES_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_MODULES_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Modules.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~
-    #~ "OS.lib" file
-    #~ ~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_OS_PATH="$(BU.ModuleInit.FindPath "" "OS.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_OS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_OS_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'OS.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~~~
-    #~ "PosixTerm.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_POSIXTERM_PATH="$(BU.ModuleInit.FindPath "" "PosixTerm.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_POSIXTERM_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_POSIXTERM_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'PosixTerm.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~
-    #~ "Status.lib" file
-    #~ ~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_STATUS_PATH="$(BU.ModuleInit.FindPath "" "Status.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_STATUS_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_STATUS_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Status.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~
-    #~ "Text.lib" file
-    #~ ~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH="$(BU.ModuleInit.FindPath "" "Text.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Text.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~~~~~~
-    #~ "TextFormat.lib" file
-    #~ ~~~~~~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_TEXTFORMAT_PATH="$(BU.ModuleInit.FindPath "" "TextFormat.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXTFORMAT_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXTFORMAT_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'TextFormat.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~
-    #~ "Time.lib" file
-    #~ ~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_TIME_PATH="$(BU.ModuleInit.FindPath "" "Time.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_TIME_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_TIME_PATH}" \
-        'Filepath' "$BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Time.lib'()" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-
-    #~ ~~~~~~~~~~~~~~~~
-    #~ "Usage.lib" file
-    #~ ~~~~~~~~~~~~~~~~
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_FUNCTIONS_FILE_USAGE_PATH="$(BU.ModuleInit.FindPath "" "Usage.lib" 'f')" || {
-
-    }
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_USAGE_PATH' "${__BU_MAIN_MODULE_FUNCTIONS_FILE_USAGE_PATH}" \
-        'Filepath' "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Usage.lib')" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
+#     v_lineno="$(( LINENO + 2 ))";
+#
+#     __BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH="$(BU.ModuleInit.FindPath "" "Args.lib" 'f')" || {
+#
+#     }
+#
+#     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH' \
+#         "${__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH}" 'Filepath' \
+#         "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize 'Args.lib')" \
+#         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+#         "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
 
     return 0;
 }
@@ -1481,6 +1194,10 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_
     "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY}" \
     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
     "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))" "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+
+# Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
+
+BU.Main.ModConfig.Module.MainModuleFunctionsPath;
 
 ## ==============================================
 
