--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -830,16 +830,22 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     local v_filename;       # VAR TYPE : String - DESC : Filename without its path.
     local v_filenameNoExt;  # VAR TYPE : String - DESC : Filename without its path and its extension.
 
+    local v_newExt;
+    local v_oldExt;
+
     local v_varNameFull;    # VAR TYPE : String - DESC :
 
     #**** Code ****
+    v_newExt='';
+    v_oldExt='.lib';
+
     # Automatically creating a global filepath variable for each existing library file in case they are needed, since it takes a lot of lines to do manually.
     for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
         # Obtaining the file's name without its path.
-        v_filename="$(BU.Main.Files.GetNameFromPath "${f}")";
+        v_filename="$(basename "${f}")";
 
         # Removing the ".lib" extension.
-        v_filenameNoExt="$(BU.Main.Files.DeleteExtension "${v_filename}" '.lib')";
+        v_filenameNoExt="${v_filename%"${v_oldExt}"}${v_newExt}";
 
         # Uppercasing the output of the previous command in order to write it into the new global variable's name.
         v_filenameNoExt="${v_filenameNoExt^^}";
@@ -847,17 +853,24 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
         # Creation of the global filepath variable's name.
         v_varNameFull="__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH";
 
+        # Dynamically creating the filepath global variable.
+        eval "__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH=$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')";
+
         # Assignation de la valeur dans le tableau associatif.
-        file_paths["${v_varNameFull}"]="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')";
+        #file_paths["${v_varNameFull}"]="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')" # || { echo "AUTOVAR"; return 1; };
 
         v_lineno="$(( LINENO - 2 ))";
 
-        BU.ModuleInit.DisplayInitGlobalVarsInfos "$v_varNameFull" \
-            "${file_paths["$v_varNameFull"]}" 'Filepath' \
+        BU.ModuleInit.DisplayInitGlobalVarsInfos "${v_varNameFull}" \
+            "${!v_varNameFull}" 'Filepath' \
             "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize "${v_filename}")" \
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
     done
+
+    echo "AUTOVAR 1 : ${__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH}";
+    echo "AUTOVAR 2 : ${__BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH}";
+    echo "AUTOVAR 3 : ${__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH}";
 
 #     for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
 #         # Obtaining the file's name after deleting its path.
