--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -823,8 +823,7 @@ function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
 function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
 {
     #**** Variables ****
-    declare -A file_paths;  # VAR TYPE : Array  - DESC : This associative array stores the
-
+    declare -i i;           # VAR TYPE : Int    - DESC : Loop iterator.
     declare -i v_lineno;    # VAR TYPE : Int    - DESC : Line number of a global variable declaration.
 
     local v_filename;       # VAR TYPE : String - DESC : Filename without its path.
@@ -833,14 +832,17 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
     local v_newExt;
     local v_oldExt;
 
-    local v_varNameFull;    # VAR TYPE : String - DESC :
+    local v_varNameFull;    # VAR TYPE : String - DESC : Name of the global filepath variable generated automatically.
 
     #**** Code ****
+    i=0;
+
     v_newExt='';
     v_oldExt='.lib';
 
     # Automatically creating a global filepath variable for each existing library file in case they are needed, since it takes a lot of lines to do manually.
     for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
+
         # Obtaining the file's name without its path.
         v_filename="$(basename "${f}")";
 
@@ -856,21 +858,23 @@ function BU.Main.ModConfig.Module.MainModuleFunctionsPath()
         # Dynamically creating the filepath global variable.
         eval "__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH=$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')";
 
-        # Assignation de la valeur dans le tableau associatif.
-        #file_paths["${v_varNameFull}"]="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}" "${v_filename}" 'f')" # || { echo "AUTOVAR"; return 1; };
-
         v_lineno="$(( LINENO - 2 ))";
 
-        BU.ModuleInit.DisplayInitGlobalVarsInfos "${v_varNameFull}" \
-            "${!v_varNameFull}" 'Filepath' \
+        BU.ModuleInit.DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_FUNCTIONS_FILE_${v_filenameNoExt}_PATH" \
+            "${v_varNameFull}" 'Filepath' \
             "$(BU.Main.ModConfig.Module.MainModuleFunctionsPath.Optimize "${v_filename}")" \
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-    done
 
-    echo "AUTOVAR 1 : ${__BU_MAIN_MODULE_FUNCTIONS_FILE_ARGS_PATH}";
-    echo "AUTOVAR 2 : ${__BU_MAIN_MODULE_FUNCTIONS_FILE_BASICMATHS_PATH}";
-    echo "AUTOVAR 3 : ${__BU_MAIN_MODULE_FUNCTIONS_FILE_TEXT_PATH}";
+        # TEST
+        echo "RETURN CODE : ${?}";
+        echo "   FILE[${i}] :${f}";
+        echo "AUTOVAR[${i}] : ${v_varNameFull}";
+        echo;
+
+        # Incrementing the loop iterator.
+        i="$(( i + 1 ))";
+    done
 
 #     for f in "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}"; do
 #         # Obtaining the file's name after deleting its path.
