--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -74,25 +74,25 @@ function BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize() {
 
 ## COLOR CODES FOR TEXT ENCODING (SYSTEM)
 
-declare -i __BU_MAIN_COLOR_CODE_BLACK='0';
-declare -i __BU_MAIN_COLOR_CODE_MAROON='1';
-declare -i __BU_MAIN_COLOR_CODE_GREEN='2';
-declare -i __BU_MAIN_COLOR_CODE_OLIVE='3';
+declare -g -i __BU_MAIN_COLOR_CODE_BLACK='0';
+declare -g -i __BU_MAIN_COLOR_CODE_MAROON='1';
+declare -g -i __BU_MAIN_COLOR_CODE_GREEN='2';
+declare -g -i __BU_MAIN_COLOR_CODE_OLIVE='3';
 
-declare -i __BU_MAIN_COLOR_CODE_NAVY='4';
-declare -i __BU_MAIN_COLOR_CODE_PURPLE='5';
-declare -i __BU_MAIN_COLOR_CODE_TEAL='6';
-declare -i __BU_MAIN_COLOR_CODE_SILVER='7';
+declare -g -i __BU_MAIN_COLOR_CODE_NAVY='4';
+declare -g -i __BU_MAIN_COLOR_CODE_PURPLE='5';
+declare -g -i __BU_MAIN_COLOR_CODE_TEAL='6';
+declare -g -i __BU_MAIN_COLOR_CODE_SILVER='7';
 
-declare -i __BU_MAIN_COLOR_CODE_GRAY="8";
-declare -i __BU_MAIN_COLOR_CODE_RED='9';
-declare -i __BU_MAIN_COLOR_CODE_LIME='10';
-declare -i __BU_MAIN_COLOR_CODE_YELLOW='11';
+declare -g -i __BU_MAIN_COLOR_CODE_GRAY="8";
+declare -g -i __BU_MAIN_COLOR_CODE_RED='9';
+declare -g -i __BU_MAIN_COLOR_CODE_LIME='10';
+declare -g -i __BU_MAIN_COLOR_CODE_YELLOW='11';
 
-declare -i __BU_MAIN_COLOR_CODE_BLUE='12';
-declare -i __BU_MAIN_COLOR_CODE_FUCHSIA='13';
-declare -i __BU_MAIN_COLOR_CODE_AQUA='14';
-declare -i __BU_MAIN_COLOR_CODE_WHITE='15';
+declare -g -i __BU_MAIN_COLOR_CODE_BLUE='12';
+declare -g -i __BU_MAIN_COLOR_CODE_FUCHSIA='13';
+declare -g -i __BU_MAIN_COLOR_CODE_AQUA='14';
+declare -g -i __BU_MAIN_COLOR_CODE_WHITE='15';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_BLACK'       "${__BU_MAIN_COLOR_CODE_BLACK}"     'Int'   "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_BLACK}" 'C')"     "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 20 ))";
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_MAROON'      "${__BU_MAIN_COLOR_CODE_MAROON}"    'Int'   "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_MAROON}" 'C')"    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 20 ))";
@@ -118,13 +118,13 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WHITE'       "${_
 
 ## COLOR CODES FOR TEXT ENCODING (OTHERS)
 
-declare -i __BU_MAIN_COLOR_CODE_CYAN='51';
-declare -i __BU_MAIN_COLOR_CODE_ORANGE='166';
-declare -i __BU_MAIN_COLOR_CODE_PINK='200';
-declare -i __BU_MAIN_COLOR_CODE_SALMON='209';
-declare -i __BU_MAIN_COLOR_CODE_TAN='180';
-declare -i __BU_MAIN_COLOR_CODE_TURQUOISE='51';
-declare -i __BU_MAIN_COLOR_CODE_VIOLET='177';
+declare -g -i __BU_MAIN_COLOR_CODE_CYAN='51';
+declare -g -i __BU_MAIN_COLOR_CODE_ORANGE='166';
+declare -g -i __BU_MAIN_COLOR_CODE_PINK='200';
+declare -g -i __BU_MAIN_COLOR_CODE_SALMON='209';
+declare -g -i __BU_MAIN_COLOR_CODE_TAN='180';
+declare -g -i __BU_MAIN_COLOR_CODE_TURQUOISE='51';
+declare -g -i __BU_MAIN_COLOR_CODE_VIOLET='177';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_CYAN'        "${__BU_MAIN_COLOR_CODE_CYAN}"      'Int'   "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_CYAN}" 'C')"      "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 8 ))";
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_ORANGE'      "${__BU_MAIN_COLOR_CODE_ORANGE}"    'Int'   "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_ORANGE}" 'C')"    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 8 ))";
@@ -139,61 +139,61 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_VIOLET'      "${_
 ## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "BU.Main.TextFormat.SetTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
 
 # Commands text display color           | Default color : gray
-__BU_MAIN_COLOR_CODE_CMD="${__BU_MAIN_COLOR_CODE_GRAY}";
+declare -g __BU_MAIN_COLOR_CODE_CMD="${__BU_MAIN_COLOR_CODE_GRAY}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_CMD' "${__BU_MAIN_COLOR_CODE_CMD}"               'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_CMD}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Error text display color				| Default color : Red
-__BU_MAIN_COLOR_CODE_ERROR="${__BU_MAIN_COLOR_CODE_RED}";
+declare -g __BU_MAIN_COLOR_CODE_ERROR="${__BU_MAIN_COLOR_CODE_RED}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_ERROR' "${__BU_MAIN_COLOR_CODE_ERROR}"           'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_ERROR}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Function name display color           | Default color : Purple
-__BU_MAIN_COLOR_CODE_FUNCTION="${__BU_MAIN_COLOR_CODE_PURPLE}";
+declare -g __BU_MAIN_COLOR_CODE_FUNCTION="${__BU_MAIN_COLOR_CODE_PURPLE}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_FUNCTION' "${__BU_MAIN_COLOR_CODE_FUNCTION}"     'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_FUNCTION}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Highlighted text display color		| Default color : Cyan
-__BU_MAIN_COLOR_CODE_HIGHLIGHT="${__BU_MAIN_COLOR_CODE_CYAN}";
+declare -g __BU_MAIN_COLOR_CODE_HIGHLIGHT="${__BU_MAIN_COLOR_CODE_CYAN}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_HIGHLIGHT' "${__BU_MAIN_COLOR_CODE_HIGHLIGHT}"   'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_HIGHLIGHT}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Newstep text display color            | Default color : Orange
-__BU_MAIN_COLOR_CODE_NEWSTEP="${__BU_MAIN_COLOR_CODE_ORANGE}";
+declare -g __BU_MAIN_COLOR_CODE_NEWSTEP="${__BU_MAIN_COLOR_CODE_ORANGE}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_NEWSTEP' "${__BU_MAIN_COLOR_CODE_NEWSTEP}"       'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_NEWSTEP}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Directories and files paths display color     | Default color : Lime
-__BU_MAIN_COLOR_CODE_PATH="${__BU_MAIN_COLOR_CODE_LIME}";
+declare -g __BU_MAIN_COLOR_CODE_PATH="${__BU_MAIN_COLOR_CODE_LIME}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_PATH' "${__BU_MAIN_COLOR_CODE_PATH}"             'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_PATH}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Reset color to terminal's default text color  | Always the "$(tput sgr0)" command.
-__BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"; printf "%s" "${__BU_MAIN_COLOR_CODE_RESET}";
+declare -g __BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"; printf "%s" "${__BU_MAIN_COLOR_CODE_RESET}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_RESET' "${__BU_MAIN_COLOR_CODE_RESET}"           'CMD' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_RESET}" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Success text display color			| Default color : Green
-__BU_MAIN_COLOR_CODE_SUCCESS="${__BU_MAIN_COLOR_CODE_GREEN}";
+declare -g __BU_MAIN_COLOR_CODE_SUCCESS="${__BU_MAIN_COLOR_CODE_GREEN}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_SUCCESS' "${__BU_MAIN_COLOR_CODE_SUCCESS}"       'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_SUCCESS}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Variable, parameter or argument name  | Default color : Orange
-__BU_MAIN_COLOR_CODE_VAR="${__BU_MAIN_COLOR_CODE_ORANGE}";
+declare -g __BU_MAIN_COLOR_CODE_VAR="${__BU_MAIN_COLOR_CODE_ORANGE}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_VAR' "${__BU_MAIN_COLOR_CODE_VAR}"               'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_VAR}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Warning text display color			| Default color : Yellow
-__BU_MAIN_COLOR_CODE_WARNING="${__BU_MAIN_COLOR_CODE_YELLOW}";
+declare -g __BU_MAIN_COLOR_CODE_WARNING="${__BU_MAIN_COLOR_CODE_YELLOW}";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WARNING' "${__BU_MAIN_COLOR_CODE_WARNING}"       'Int' "$(BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__ACT_WARNING}" 'A')" \
 	"${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
